# INFO905-TP2

./: pyproject.toml  tp.ipynb
